try to fix image rescaling on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -47,6 +47,9 @@ img {
   max-width: 100%;
   vertical-align: middle; }
 
+.content {
+  min-width: 450px;
+}
 /**
  * Figures
  */
